--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
             <a href="./index.html" lang="en" class="header-logo"><span class="header-logo-first-part">Web</span><span class="header-logo-second-part">Studio</span></a>
             <ul class="navi-list">
                 <li class="navi-item"><a href="/index.html" class="navi-item-link">Студия</a></li>
-                <li class="navi-item"><a href="/portfolio.html" class="navi-item-link">Портфолио</a></li>
+                <li class="navi-item"><a href="/portfolio.html" class="navi-item-link current">Портфолио</a></li>
                 <li class="navi-item"><a href="" class="navi-item-link">Контакты</a></li>
             </ul>
         </nav>
