--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header class="header">
         <nav class="navi">
             <a href="./index.html" lang="en" class="header-logo"><span class="header-logo-first-part">Web</span><span class="header-logo-second-part">Studio</span></a>
             <ul class="navi-list">
-                <li class="navi-item"><a href="/index.html" class="navi-item-link current">Студия</a></li>
-                <li class="navi-item"><a href="/portfolio.html" class="navi-item-link">Портфолио</a></li>
+                <li class="navi-item"><a href="./index.html" class="navi-item-link current">Студия</a></li>
+                <li class="navi-item"><a href="./portfolio.html" class="navi-item-link">Портфолио</a></li>
                 <li class="navi-item"><a href="" class="navi-item-link">Контакты</a></li>
             </ul>
         </nav>
