--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
                 </li>
                 <li class="page-list-item">
                     <a href="" class="page-item-link">
-                        <img src="/images/img16.jpg" alt="Руки на ноутбуке" width="370" height="290" class="page-item-img">
+                        <img src="./images/img16.jpg" alt="Руки на ноутбуке" width="370" height="290" class="page-item-img">
                         <h2 class="page-subtitle">Growing Business</h2>
                         <p class="page-text">Приложение</p>
                     </a>
